# python3-lot

./: .clang-format  .gitignore  MANIFEST.in  README.md  changelog  setup.cfg  setup.py
c_src/: gpio.cpp  lot.cpp  type_cast.hpp
debian/: changelog
py_src/lot/: __init__.py
src/lot/: __init__.py
test/: blink.py  mpu9250_i2c.py  mpu9250_reg.py  mpu9250_spi.py  mpu9250_spi_cs.py  uart_echo.py
wrap/: lot.i
