[metadata]
name = lot
version = 0.0.3
url = https://github.com/loliot
project_urls = 
    Source = https://github.com/loliot/lot-python.git

author = Hyeonki Hong
author_email = hhk7734@gmail.com
description = A module to control SBC GPIO
long-description = file: README.md, changelog
long_description_content_type = text/markdown
keywords = lot, GPIO
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: System :: Hardware

[options]
package_dir = 
    = src
packages = find:

[options.packages.find]
where = src